libs/common-lib/src/main/java/com/example/common/error/package-info.java
@NonNullApi
@NonNullFields
package com.example.common.error;

import org.springframework.lang.NonNullApi;
import org.springframework.lang.NonNullFields;
